<resources>
    <string name="app_name">MotivateMe</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_today_stats">TodayStats</string>
    <string name="title_activity_goals">Goals</string>
    <string name="title_activity_log_today">LogToday</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="diet_healthy">Healthy</string>
    <string name="diet_average">Average</string>
    <string name="diet_poor">Poor</string>
    <string name="workout_input_label">Did you workout?</string>
    <string name="diet_input_label">How healthy did you eat?</string>
    <string name="weight_input_label">How much do you weigh today?</string>
    <string name="title_activity_add_goal">AddGoal</string>
    <string name="title_activity_graphs">Graphs</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_user_settings">UserSettings</string>
    <string name="title_activity_set_diet">setDiet</string>
    <string name="title_activity_set_weight">SetWeight</string>
    <string name="title_activity_set_workout">SetWorkout</string>
    <string name="title_activity_record_weight">RecordWeight</string>
</resources>
