<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/weight_input_label"
            android:id="@+id/weighttxt" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/weightinput"
            android:clickable="true"
            android:inputType="number"
            android:singleLine="true"
            android:enabled="true"
            android:width="80sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/diet_input_label"
            android:id="@+id/diettxt"
            android:paddingTop="15sp" />

        <RadioGroup
            android:id="@+id/radioGroupDiet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diet_healthy"
                android:id="@+id/diet_healthy_btn"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diet_average"
                android:id="@+id/diet_average_btn"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diet_poor"
                android:id="@+id/diet_poor_btn"
                android:checked="false" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/workout_input_label"
            android:id="@+id/WOtxt"
            android:paddingTop="15sp" />

        <ToggleButton
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:id="@+id/workoutToggle"
            android:textOn="Yes"
            android:textOff="No" />
    </LinearLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/nav"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>