<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="45 days"
            android:id="@+id/textView2"
            android:textColor="#ff082aff"
            android:textSize="60sp"
            android:gravity="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Until &quot;Vegas trip&quot;"
            android:id="@+id/textView3"
            android:gravity="center"
            android:textColor="#ff5b5b5b"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:text="I&apos;ve worked out today"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.09" />

    </LinearLayout>


    <RadioGroup
        android:id="@+id/radioGroupDiet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet_healthy"
            android:id="@+id/diet_healthy_btn"
            android:layout_toEndOf="@+id/diettxt"
            android:layout_alignBottom="@+id/diettxt"
            android:layout_toRightOf="@+id/diettxt"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet_average"
            android:id="@+id/diet_average_btn"
            android:layout_toEndOf="@+id/diet_healthy_btn"
            android:checked="false"
            android:layout_alignBottom="@+id/diettxt"
            android:layout_toRightOf="@+id/diet_healthy_btn" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet_poor"
            android:id="@+id/diet_poor_btn"
            android:layout_toEndOf="@+id/diet_average_btn"
            android:checked="false"
            android:layout_alignBottom="@+id/diettxt"
            android:layout_toRightOf="@+id/diet_average_btn" />

    </RadioGroup>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:id="@+id/setting_btn"
        android:onClick="toSettings"
        android:nestedScrollingEnabled="true" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/nav"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</LinearLayout>